--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
 /* navBar Css */
 nav{
     position: fixed;
+    max-width: 1600px;
     width: 100%;
     background-image: linear-gradient(180deg,#061e30 -20%,rgba(255,255,255,0) 95%);
     z-index: 150;
@@ -86,7 +87,7 @@ nav{
     transition: .2s ease-in-out;
 }
 .nav2 li a{
-    font-size: 18px;
+    font-size: 16px;
     text-decoration: none;
     margin-inline: 30px;
     color: rgb(255, 255, 255);
@@ -107,7 +108,7 @@ nav{
 .intro_heading{
     position: absolute;
     width: 95%;
-    top: 140px;
+    top: 110px;
     left: 30px;
     z-index: 10;
     color: #fff;
@@ -207,12 +208,17 @@ nav{
 
 /* Offers css */
 
+.offers_{
+    width: 90%;
+}
+
 .offers__{
-    height: 200px;
-    width: 302px;
+    height: 210px;
+    width: 200px;
     padding: 15px;
     box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.3);
     border-radius: 20px;
+    cursor: pointer;
 }
 
 .bx-swim{
@@ -242,6 +248,28 @@ nav{
     font-size: 40px;
 }
 
+.ri-umbrella-line{
+    width: fit-content;
+    border-radius: 50%;
+    padding: 1rem;
+    background-color: rgb(255, 67, 73, 0.2);
+    color: rgb(255, 67, 73);
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.ri-building-4-line{
+    width: fit-content;
+    border-radius: 50%;
+    padding: 1rem;
+    background-color: rgba(223, 83, 2, 0.2);
+    color: rgb(223, 83, 2);
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1;
+}
+
 .offers__ h2{
     font-family: 'Goldana', sans-serif;
     letter-spacing: 5px;
@@ -249,6 +277,7 @@ nav{
 
 .offers h1{
     margin-block: 50px;
+    font-size: 2rem;
     font-family: 'This Is The Future', sans-serif;
     letter-spacing: 5px;
     color: rgba(2, 156, 84, 0.83);
@@ -257,7 +286,7 @@ nav{
 /* recommendation css */
 
 .explo{
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 3px;
     color: rgba(115, 115, 115, 0.922);
     text-transform: uppercase;
@@ -299,6 +328,7 @@ nav{
 
 .recom h1{
     margin-block: 50px;
+    font-size: 2rem;
     font-family: 'This Is The Future', sans-serif;
     letter-spacing: 5px;
     color: #029c54d4;
@@ -445,10 +475,10 @@ nav{
     font-weight: 500;
 }
 
-.about_{
+.about_ h1{
     font-family: 'This Is The Future', sans-serif; 
     color: #029c54;
-    font-size: 30px;
+    font-size: 2rem;
     letter-spacing: 3px;
 }
 
@@ -581,11 +611,9 @@ footer li:hover{
         padding: 5px;
     }
 
-    .offers_{
-        display: flex;
-        justify-content: center;
-        align-self: center;
-        flex-direction: column;
+    .offers__{
+        height: 210px;
+        width: 150px;
     }
     .recom_--{
         display: flex;
