--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body{
 /* navBar Css */
 nav{
     position: fixed;
-    max-width: 1600px;
     width: 100%;
     background-image: linear-gradient(180deg,#061e30 -20%,rgba(255,255,255,0) 95%);
     z-index: 150;
@@ -334,6 +333,7 @@ nav{
     color: #029c54d4;
 }
 
+
 .recom_{
     width: 100%;
     height: 100%;
@@ -354,8 +354,14 @@ nav{
     height: 100%;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     background-color: #000;
     opacity: 0;
+}
+
+.last_1{
+    width: 400px;
 }
 
 .recom_:hover .overlay{
@@ -368,6 +374,7 @@ nav{
     transform: translateY(0px);
     transition: .4s ease-in-out;
 }
+
 .recom-hide{
     height: 0;
     opacity: 0;
@@ -384,7 +391,7 @@ nav{
     z-index: 1;
 }
 
-.recom h2{
+.recom_ h2{
     z-index: 99;
     color: #fff;
     font-family: 'Goldana', sans-serif;
@@ -392,7 +399,7 @@ nav{
     margin: 0;
     text-shadow: 0px 0px 10px #000;
 }
-.recom span{
+.recom_ span{
     z-index: 99;
     color: rgba(213, 213, 213, 0.722);
     text-shadow: 0px 0px 10px #000;
